--- a/paginas/cadastro.phtml
+++ b/paginas/cadastro.phtml
@@ -9,10 +9,10 @@
                 <input type="email" class="required" name="email" id="email" oninput="emailValidate()" placeholder="E-mail" required>
                 <span class="span-required" style="margin:5px 0 0 10px; color:red; display: none;">E-mail inválido</span>
 
-                <input type="password" name="Number" class="required" oninput="mainPasswordValidate()" required id="senha" placeholder="Senha" style="margin-top:20px;">
+                <input type="password" name="senha" class="required" oninput="mainPasswordValidate()" required id="senha" placeholder="Senha" style="margin-top:20px;">
                 <span class="span-required" style=" margin:5px 0 0 10px; display: none; color: red;">Deve ter pelo menos 8 digetos </span>
 
-                <input type="password" placeholder="Confirmar Senha" name="Number" class="required" oninput="mainPasswordValidate2()" required id="senha" style="margin-top:20px;">
+                <input type="password" placeholder="Confirmar Senha" name="confimar senha" class="required" oninput="mainPasswordValidate2()" required id="senha" style="margin-top:20px;">
                 <span class="span-required" style="margin:5px 0 0 10px; display: none; color: red;">Senha senha incorreta</span>
 
                 <input type="nome" name="nome" id="nome" class="required" oninput="nomeValidate()" placeholder="Nome Completo" style="margin-top:20px;" required>
@@ -47,4 +47,8 @@
 
     </div>
 
+    
+
 </section>
+
+<script src="paginas/validacoes/cadastro/post_cadastro.js"</script>
