--- a/paginas/endereco.phtml
+++ b/paginas/endereco.phtml
@@ -3,7 +3,7 @@
     <div class="conteiner_endereco">
 
         <h2>ADICIONER UM ENDERECO</h2>
-        <form action="home" method="post" id="">
+        <form action="home" method="post" id="formEndereco">
 
             <input type="nome" name="nome" placeholder="Nome Completo" class="required" id="nome" required oninput="nomeEnderecoValidate">
             <span class="span-required" style="margin:5px 0 0 10px; color:red; display: none;">O nome deve ter pelo menos 3 digitos</span>
@@ -30,9 +30,12 @@
 
 
             <div class="btn">
-                <button>Confirmar</button>
+                <button type="submit" >Confirmar</button>
             </div>
 
         </form>
     </div>
 </section>
+
+
+<script src="paginas/validacoes/endereco/post_endereco.js"</script>
